# SEOForge-mcp-server

./: .env.example  .env.production  .gitattributes  .gitconfig  .gitignore  .vercelignore  API_COMPLIANCE_VERIFICATION.md  BILINGUAL_FEATURES_SUMMARY.md  BUILD_FIX_SUMMARY.md  CLEANUP_SUMMARY.md  CLOUDFLARE-DEPLOYMENT.md  COMMIT_MESSAGE.md  CONFLICT_FREE_INSTALLATION.md  CONVERSION_SUMMARY.md  DEPENDENCY_CLEANUP_PLAN.md  DEPLOY-TO-RENDER.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE_EXPRESS.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUMMARY.md  ENHANCED-FEATURES-SUMMARY.md  EXPANDED_THAI_BLOGS.md  FINAL_DEMONSTRATION_SUMMARY.md  FINAL_SUMMARY.md  GEMINI_INTEGRATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_INSTRUCTIONS.md  MANUAL_DEPLOYMENT_GUIDE.md  MCP_INTEGRATION_GUIDE.md  MIGRATION_GUIDE.md  PLUGIN_DEMO_TEST.html  PLUGIN_INSTALLATION_SUMMARY.md  PRODUCTION-SUCCESS.md  PROJECT-SUMMARY.md  PROJECT_STATUS_FINAL.md  PROJECT_SUMMARY.md  PUBLIC_API_GUIDE.md  PYTHON_DEPLOYMENT_GUIDE.md  README-PRODUCTION.md  (+61 more)
SeoForgeWizard-Clean/: CHANGELOG.md  (+2 more)
backend/: Dockerfile  databutton.py  main.py  pyproject.toml  requirements.txt  routers.json  vercel_app.py
backend/api/: index.py  mcp-server.py  wordpress.py  wordpress_plugin.py
backend/app/apis/blog_generator/: __init__.py
backend/app/apis/flux_image_gen/: __init__.py
backend/app/apis/mcp_server/: __init__.py
backend/app/core/: __init__.py  ai_orchestrator.py  config.py  logging_config.py  mcp_context.py  security.py
backend/app/services/: __init__.py  flux_image_generator.py  website_intelligence.py
(+231 files in other folders)
