[project]
name = "seoforge-backend"
version = "1.0.0"
description = "SEOForge MCP Server Backend API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "pydantic==2.5.0",
    "redis==5.0.1",
    "aioredis==2.0.1",
    "asyncpg==0.29.0",
    "PyJWT==2.8.0",
    "openai==1.6.1",
    "anthropic==0.8.1",
    "google-generativeai==0.3.2",
    "numpy>=1.24.0",
    "scikit-learn==1.3.2",
    "textstat==0.7.3",
    "aiohttp==3.9.1",
    "beautifulsoup4==4.12.2",
    "requests==2.31.0",
    "lxml==4.9.3",
    "python-whois==0.8.0",
    "dnspython==2.4.2",
    "tldextract==5.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
